--- a/pref.ini
+++ b/pref.ini
@@ -125,13 +125,13 @@ custom_proxy_group=🇺🇸美国-🎯原生`url-test`美国.*原生`http://www.
 custom_proxy_group=🇺🇸美国-🌙Light`url-test`美国.*Light`http://www.gstatic.com/generate_204`300,5,50
 custom_proxy_group=🇺🇸美国-⭐Premium`url-test`美国.*Premium`http://www.gstatic.com/generate_204`300,5,50
 custom_proxy_group=🇺🇸美国-👑Exclusive`url-test`美国.*Exclusive`http://www.gstatic.com/generate_204`300,5,50
-custom_proxy_group=🌐 其他`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*$
-custom_proxy_group=🌐 其他-📡标准`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*标准.*$
-custom_proxy_group=🌐 其他-🔓解锁`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*解锁.*$
-custom_proxy_group=🌐 其他-🎯原生`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*原生.*$
-custom_proxy_group=🌐 其他-🌙Light`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*Light.*$
-custom_proxy_group=🌐 其他-⭐Premium`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*Premium.*$
-custom_proxy_group=🌐 其他-👑Exclusive`select`^(?!香港|台湾|日本|韩国|新加坡|美国).*Exclusive.*$
+custom_proxy_group=🌐 其他`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*$
+custom_proxy_group=🌐 其他-📡标准`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*标准.*$
+custom_proxy_group=🌐 其他-🔓解锁`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*解锁.*$
+custom_proxy_group=🌐 其他-🎯原生`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*原生.*$
+custom_proxy_group=🌐 其他-🌙Light`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*Light.*$
+custom_proxy_group=🌐 其他-⭐Premium`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*Premium.*$
+custom_proxy_group=🌐 其他-👑Exclusive`select`^(?!香港)(?!台湾)(?!日本)(?!韩国)(?!新加坡)(?!美国).*Exclusive.*$
 
 ;设置分组标志位
 
